--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </li>
       <li>
         <a
-          href="mailto:juliofortunato58@gmail.com"
+          href="mailto:hi@juliofortunato.dev"
           target="_blank"
           aria-label="Send me an e-mail"
         >
