--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="picture" src="assets/images/julio.jpg" alt="" width="210" height="210">
+    <img class="picture" src="assets/images/julio.jpg" alt="">
     <h1 class="title">Julio Fortunato</h1>
     <p class="description">
       Hello! My name is Julio, and I’m a Brazil-based web developer. Currently I’m working mostly with
